--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,10 +1,15 @@
 @import './utils/variables';
+@import './utils/container';
 @import './utils/utils';
 @import './utils/mixin';
+
 @import './menu/logo';
 @import './menu/navigation';
 @import './menu/contacts';
+@import './menu/mobile';
+
 @import './components/button';
+
 @import './sections/hero';
 @import './components/overlay';
 @import './components/modal-window';
