--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,30 @@
   --outline--background-color: #c4c4c4;
 }
 
+.container {
+  width: 100%;
+}
+
+@media screen and (min-width: 480px) {
+  .container {
+    width: 450px;
+    padding: 0 15px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    width: 738px;
+    padding: 0 10px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1170px;
+    padding: 0 15px;
+  }
+}
 *,
 *::before,
 *::after {
@@ -56,12 +80,6 @@ img {
   list-style: none;
   margin: 0;
   padding-left: 0;
-}
-
-.container {
-  margin: 0 auto;
-  max-width: 1200px;
-  padding: 0 15px;
 }
 
 .section {
@@ -202,6 +220,22 @@ img {
   margin-right: 50px;
 }
 
+@media screen and (max-width: 767px) {
+  .nav__list {
+    display: none;
+  }
+  .contact__list {
+    display: none;
+  }
+  .mobile {
+    position: fixed;
+  }
+}
+@media screen and (min-width: 768px) {
+  .mobile {
+    display: none;
+  }
+}
 .button {
   display: block;
   cursor: pointer;
