--- a/css/main.css
+++ b/css/main.css
@@ -17,12 +17,13 @@
 
 .container {
   width: 100%;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 @media screen and (min-width: 480px) {
   .container {
     width: 450px;
-    padding: 0 15px;
     margin-left: auto;
     margin-right: auto;
   }
@@ -30,13 +31,15 @@
 @media screen and (min-width: 768px) {
   .container {
     width: 738px;
-    padding: 0 10px;
+    padding-left: 10px;
+    padding-right: 10px;
   }
 }
 @media screen and (min-width: 1200px) {
   .container {
     width: 1170px;
-    padding: 0 15px;
+    padding-left: 15px;
+    padding-right: 15px;
   }
 }
 *,
@@ -82,6 +85,11 @@ img {
   padding-left: 0;
 }
 
+.link {
+  color: inherit;
+  text-decoration: none;
+}
+
 .section {
   padding-top: 94px;
   padding-bottom: 94px;
@@ -109,12 +117,24 @@ img {
   line-height: 1.1923076923;
 }
 
-.page__logo {
-  margin-right: 93px;
-  padding-top: 23px;
-  padding-bottom: 23px;
+@media screen and (max-width: 768px) {
+  .page__logo {
+    padding-top: 16px;
+    padding-bottom: 16px;
+  }
 }
-
+@media screen and (min-width: 768px) {
+  .page__logo {
+    margin-right: 88px;
+    padding-top: 24px;
+    padding-bottom: 24px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .page__logo {
+    margin-right: 93px;
+  }
+}
 .page__studio {
   color: var(--studio);
   margin: 0;
@@ -125,99 +145,10 @@ img {
   border-bottom: 1px solid var(--border--headr);
 }
 
-.page__nav,
-.nav {
+.nav__container,
+.page__nav {
   display: flex;
   align-items: center;
-}
-
-.nav__list {
-  display: flex;
-}
-
-.nav__link {
-  position: relative;
-  font-weight: 500;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  padding: 32px 0;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.nav__link:hover, .nav__link:focus {
-  color: var(--accent-color);
-}
-
-.nav__link.current::after {
-  position: absolute;
-  content: "";
-  left: 0;
-  bottom: 0;
-  display: block;
-  width: 100%;
-  height: 4px;
-  background-color: var(--accent-color);
-  border-radius: 2px;
-  transform: scaleX(1);
-  /* transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); */
-}
-.nav__link::after {
-  position: absolute;
-  content: "";
-  left: 0;
-  bottom: 0;
-  display: block;
-  width: 100%;
-  height: 4px;
-  background-color: var(--accent-color);
-  border-radius: 2px;
-  transform: scaleX(0);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.nav__link:hover::after, .nav__link:focus::after {
-  transform: scaleX(1);
-}
-
-.nav__item:not(:last-child) {
-  margin-right: 50px;
-}
-
-.link {
-  color: inherit;
-  text-decoration: none;
-}
-
-.link.current {
-  color: var(--accent-color);
-}
-
-.contact__list {
-  display: flex;
-  margin-left: auto;
-  align-items: center;
-  font-weight: 500;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-}
-
-.contact__link {
-  color: var(--title-text-color);
-  text-decoration: none;
-  padding: 32px 0;
-  display: flex;
-  align-items: center;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.contact__link:hover, .contact__link:focus {
-  color: var(--accent-color);
-}
-
-.contact__icon {
-  margin-right: 10px;
-  fill: currentColor;
-}
-
-.contact__item:not(:last-child) {
-  margin-right: 50px;
 }
 
 @media screen and (max-width: 767px) {
@@ -227,12 +158,71 @@ img {
   .contact__list {
     display: none;
   }
-  .mobile {
-    position: fixed;
+  .nav__container {
+    display: flex;
+    align-items: center;
+  }
+  .burger__menu {
+    display: block;
+    margin-left: auto;
+    top: 10px;
+    right: 0;
+    line-height: 0;
+    border: none;
+    background-color: transparent;
+    padding: 10px 0;
   }
 }
+.burger__icon {
+  width: 40px;
+  height: 40px;
+  color: #000000;
+}
+
+.mobile__menu {
+  position: fixed;
+  z-index: 100;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #ffffff;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.mobile__menu.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+
+.mobile__container {
+  position: relative;
+  padding-left: 40px;
+}
+
+.close__menu {
+  position: absolute;
+  display: block;
+  top: 10px;
+  right: 15px;
+  padding: 0;
+  line-height: 0;
+  border: 0;
+  background-color: transparent;
+}
+
+.close__icon {
+  width: 40px;
+  height: 40px;
+  color: #212121;
+}
+
 @media screen and (min-width: 768px) {
-  .mobile {
+  .mobile__menu {
     display: none;
   }
 }
