--- a/sass/menu/_contacts.scss
+++ b/sass/menu/_contacts.scss
@@ -1,35 +1,35 @@
-.contact__list {
-  display: flex;
-  margin-left: auto;
-  align-items: center;
+// .contact__list {
+//   display: flex;
+//   margin-left: auto;
+//   align-items: center;
 
-  font-weight: 500;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-}
+//   font-weight: 500;
+//   line-height: 1.14;
+//   letter-spacing: 0.02em;
+// }
 
-.contact__link {
-  color: var(--title-text-color);
-  text-decoration: none;
-  padding: 32px 0;
-  display: flex;
-  align-items: center;
+// .contact__link {
+//   color: var(--title-text-color);
+//   text-decoration: none;
+//   padding: 32px 0;
+//   display: flex;
+//   align-items: center;
 
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+//   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  &:hover,
-  &:focus {
-    color: var(--accent-color);
-  }
-}
+//   &:hover,
+//   &:focus {
+//     color: var(--accent-color);
+//   }
+// }
 
-.contact__icon {
-  margin-right: 10px;
-  fill: currentColor;
-}
+// .contact__icon {
+//   margin-right: 10px;
+//   fill: currentColor;
+// }
 
-.contact__item {
-  &:not(:last-child) {
-    margin-right: 50px;
-  }
-}
+// .contact__item {
+//   &:not(:last-child) {
+//     margin-right: 50px;
+//   }
+// }
