--- a/sass/menu/_mobile.scss
+++ b/sass/menu/_mobile.scss
@@ -5,12 +5,76 @@
   .contact__list {
     display: none;
   }
-  .mobile {
-    position: fixed;
+
+  .nav__container {
+    display: flex;
+    align-items: center;
+  }
+  .burger__menu {
+    display: block;
+    margin-left: auto;
+    top: 10px;
+    right: 0;
+    line-height: 0;
+    border: none;
+    background-color: transparent;
+    padding: 10px 0;
   }
 }
+
+.burger__icon {
+  width: 40px;
+  height: 40px;
+  color: #000000;
+}
+
+.mobile__menu {
+  position: fixed;
+  z-index: 100;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  background: #ffffff;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08),
+    0px 1px 3px rgba(0, 0, 0, 0.16);
+
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.mobile__menu.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+
+.mobile__container {
+  position: relative;
+  padding-left: 40px;
+}
+.close__menu {
+  position: absolute;
+  display: block;
+
+  top: 10px;
+  right: 15px;
+  padding: 0;
+  line-height: 0;
+  border: 0;
+  background-color: transparent;
+}
+
+.close__icon {
+  width: 40px;
+  height: 40px;
+  color: #212121;
+}
+
 @media screen and (min-width: 768px) {
-  .mobile {
+  .mobile__menu {
     display: none;
   }
 }
