--- a/sass/menu/_navigation.scss
+++ b/sass/menu/_navigation.scss
@@ -2,80 +2,75 @@
   height: 80px;
   border-bottom: 1px solid var(--border--headr);
 }
-.page__nav,
-.nav {
+.nav__container,
+.page__nav {
   display: flex;
   align-items: center;
 }
 
-.nav__list {
-  display: flex;
-}
+// .nav__list {
+//   display: flex;
+// }
 
-.nav__link {
-  position: relative;
-  font-weight: 500;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  padding: 32px 0;
+// .nav__link {
+//   position: relative;
+//   font-weight: 500;
+//   line-height: 1.14;
+//   letter-spacing: 0.02em;
+//   padding: 32px 0;
 
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+//   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  &:hover,
-  &:focus {
-    color: var(--accent-color);
-  }
-}
+//   &:hover,
+//   &:focus {
+//     color: var(--accent-color);
+//   }
+// }
 
-.nav__link {
-  &.current::after {
-    position: absolute;
-    content: '';
-    left: 0;
-    bottom: 0;
+// .nav__link {
+//   &.current::after {
+//     position: absolute;
+//     content: '';
+//     left: 0;
+//     bottom: 0;
 
-    display: block;
-    width: 100%;
-    height: 4px;
+//     display: block;
+//     width: 100%;
+//     height: 4px;
 
-    background-color: var(--accent-color);
-    border-radius: 2px;
-    transform: scaleX(1);
-    /* transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); */
-  }
+//     background-color: var(--accent-color);
+//     border-radius: 2px;
+//     transform: scaleX(1);
+//     /* transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); */
+//   }
 
-  &::after {
-    position: absolute;
-    content: '';
-    left: 0;
-    bottom: 0;
+//   &::after {
+//     position: absolute;
+//     content: '';
+//     left: 0;
+//     bottom: 0;
 
-    display: block;
-    width: 100%;
-    height: 4px;
+//     display: block;
+//     width: 100%;
+//     height: 4px;
 
-    background-color: var(--accent-color);
-    border-radius: 2px;
-    transform: scaleX(0);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  &:hover::after,
-  &:focus::after {
-    transform: scaleX(1);
-  }
-}
+//     background-color: var(--accent-color);
+//     border-radius: 2px;
+//     transform: scaleX(0);
+//     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+//   }
+//   &:hover::after,
+//   &:focus::after {
+//     transform: scaleX(1);
+//   }
+// }
 
-.nav__item {
-  &:not(:last-child) {
-    margin-right: 50px;
-  }
-}
+// .nav__item {
+//   &:not(:last-child) {
+//     margin-right: 50px;
+//   }
+// }
 
-.link {
-  color: inherit;
-  text-decoration: none;
-}
-
-.link.current {
-  color: var(--accent-color);
-}
+// .link.current {
+//   color: var(--accent-color);
+// }
