--- a/sass/utils/_container.scss
+++ b/sass/utils/_container.scss
@@ -1,10 +1,11 @@
 .container {
   width: 100%;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 @media screen and (min-width: 480px) {
   .container {
     width: 450px;
-    padding: 0 15px;
     margin-left: auto;
     margin-right: auto;
   }
@@ -13,12 +14,14 @@
 @media screen and (min-width: 768px) {
   .container {
     width: 738px;
-    padding: 0 10px;
+    padding-left: 10px;
+    padding-right: 10px;
   }
 }
 @media screen and (min-width: 1200px) {
   .container {
     width: 1170px;
-    padding: 0 15px;
+    padding-left: 15px;
+    padding-right: 15px;
   }
 }
