--- a/sass/utils/_utils.scss
+++ b/sass/utils/_utils.scss
@@ -35,7 +35,10 @@ img {
   margin: 0;
   padding-left: 0;
 }
-
+.link {
+  color: inherit;
+  text-decoration: none;
+}
 
 .section {
   padding-top: 94px;
