--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,7 +6,9 @@
 @import './menu/logo';
 @import './menu/navigation';
 @import './menu/contacts';
+@import './menu/mobile-container';
 @import './menu/mobile';
+@import './menu/mobile-stayl';
 
 @import './components/button';
 
