--- a/css/main.css
+++ b/css/main.css
@@ -151,6 +151,148 @@ img {
   align-items: center;
 }
 
+@media screen and (min-width: 768px) {
+  .nav__list {
+    display: flex;
+  }
+  .nav__link {
+    position: relative;
+    font-weight: 500;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    padding: 32px 0;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .nav__link:hover, .nav__link:focus {
+    color: var(--accent-color);
+  }
+  .nav__link.current::after {
+    position: absolute;
+    content: "";
+    left: 0;
+    bottom: 0;
+    display: block;
+    width: 100%;
+    height: 4px;
+    background-color: var(--accent-color);
+    border-radius: 2px;
+    transform: scaleX(1);
+    /* transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); */
+  }
+  .nav__link::after {
+    position: absolute;
+    content: "";
+    left: 0;
+    bottom: 0;
+    display: block;
+    width: 100%;
+    height: 4px;
+    background-color: var(--accent-color);
+    border-radius: 2px;
+    transform: scaleX(0);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .nav__link:hover::after, .nav__link:focus::after {
+    transform: scaleX(1);
+  }
+  .nav__item:not(:last-child) {
+    margin-right: 50px;
+  }
+  .link.current {
+    color: var(--accent-color);
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .contact__list {
+    display: block;
+    margin-left: auto;
+    align-items: center;
+  }
+  .contact__list {
+    margin-left: auto;
+    align-items: center;
+    padding: 21px 0;
+    font-size: 12px;
+    font-weight: 500;
+    line-height: 1.1666666667;
+    letter-spacing: 0.02em;
+  }
+  .contact__link {
+    color: var(--title-text-color);
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .contact__link:hover, .contact__link:focus {
+    color: var(--accent-color);
+  }
+  .contact__icon {
+    margin-right: 8px;
+    fill: currentColor;
+  }
+  .contact__item:not(:last-child) {
+    margin-bottom: 10px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .contact__list {
+    display: flex;
+    margin-left: auto;
+    align-items: center;
+    font-weight: 500;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+  }
+  .contact__link {
+    color: var(--title-text-color);
+    text-decoration: none;
+    padding: 32px 0;
+    display: flex;
+    align-items: center;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .contact__link:hover, .contact__link:focus {
+    color: var(--accent-color);
+  }
+  .contact__icon {
+    margin-right: 10px;
+    fill: currentColor;
+  }
+  .contact__item:not(:last-child) {
+    margin-right: 30px;
+  }
+}
+.mobile__container {
+  position: relative;
+  padding-left: 40px;
+  padding-bottom: 48px;
+}
+
+.close__menu {
+  position: absolute;
+  display: block;
+  top: 10px;
+  right: 15px;
+  padding: 0;
+  line-height: 0;
+  border: 0;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.close__icon {
+  width: 40px;
+  height: 40px;
+  color: currentColor;
+}
+
+@media screen and (min-width: 768px) {
+  .mobile__menu,
+.burger__menu {
+    display: none;
+  }
+}
 @media screen and (max-width: 767px) {
   .nav__list {
     display: none;
@@ -171,12 +313,13 @@ img {
     border: none;
     background-color: transparent;
     padding: 10px 0;
+    cursor: pointer;
   }
 }
 .burger__icon {
   width: 40px;
   height: 40px;
-  color: #000000;
+  color: currentColor;
 }
 
 .mobile__menu {
@@ -191,6 +334,7 @@ img {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .mobile__menu.is-open {
@@ -199,31 +343,57 @@ img {
   pointer-events: auto;
 }
 
-.mobile__container {
-  position: relative;
-  padding-left: 40px;
-}
-
-.close__menu {
-  position: absolute;
-  display: block;
-  top: 10px;
-  right: 15px;
-  padding: 0;
-  line-height: 0;
-  border: 0;
-  background-color: transparent;
-}
-
-.close__icon {
-  width: 40px;
-  height: 40px;
-  color: #212121;
-}
-
-@media screen and (min-width: 768px) {
-  .mobile__menu {
-    display: none;
+@media screen and (max-width: 768px) {
+  .mobile__list {
+    font-family: "Roboto";
+    font-style: normal;
+    font-size: 40px;
+    font-weight: 500;
+    line-height: 1.175;
+    letter-spacing: 0.02em;
+    padding-top: 48px;
+  }
+  .mobile__list .nav__item:not(:last-child) {
+    margin-bottom: 32px;
+  }
+  .mobile__box .mobile__nav {
+    margin-bottom: auto;
+  }
+  .link.current {
+    color: var(--accent-color);
+  }
+  .mobile-contact__list {
+    font-size: 34px;
+    font-weight: 500;
+    line-height: 1.1764705882;
+    letter-spacing: 0.02em;
+    color: #2196f3;
+  }
+  .mobile-contact__link {
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 1.1666666667;
+    letter-spacing: 0.02em;
+    color: #757575;
+  }
+  .mobile__item:not(:last-child) {
+    padding-right: 10px;
+    margin-right: 10px;
+    border-right: 1px solid rgba(33, 33, 33, 0.2);
+  }
+  .mobile__item {
+    margin-top: 64px;
+  }
+  .mobile__socials {
+    display: flex;
+    align-items: center;
+    font-family: "Roboto";
+    font-style: normal;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 1.2222222222;
+    letter-spacing: 0.02em;
+    color: #2196f3;
   }
 }
 .button {
