--- a/sass/menu/_contacts.scss
+++ b/sass/menu/_contacts.scss
@@ -1,35 +1,73 @@
-// .contact__list {
-//   display: flex;
-//   margin-left: auto;
-//   align-items: center;
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .contact__list {
+    display: block;
+    margin-left: auto;
+    align-items: center;
+  }
+  .contact__list {
+    margin-left: auto;
+    align-items: center;
 
-//   font-weight: 500;
-//   line-height: 1.14;
-//   letter-spacing: 0.02em;
-// }
+    padding: 21px 0;
+    @include font(12px, 500, 14px);
 
-// .contact__link {
-//   color: var(--title-text-color);
-//   text-decoration: none;
-//   padding: 32px 0;
-//   display: flex;
-//   align-items: center;
+    letter-spacing: 0.02em;
+  }
+  .contact__link {
+    color: var(--title-text-color);
+    text-decoration: none;
 
-//   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: flex;
+    align-items: center;
 
-//   &:hover,
-//   &:focus {
-//     color: var(--accent-color);
-//   }
-// }
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-// .contact__icon {
-//   margin-right: 10px;
-//   fill: currentColor;
-// }
+    &:hover,
+    &:focus {
+      color: var(--accent-color);
+    }
+  }
+  .contact__icon {
+    margin-right: 8px;
+    fill: currentColor;
+  }
 
-// .contact__item {
-//   &:not(:last-child) {
-//     margin-right: 50px;
-//   }
-// }
+  .contact__item:not(:last-child) {
+    margin-bottom: 10px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .contact__list {
+    display: flex;
+    margin-left: auto;
+    align-items: center;
+
+    font-weight: 500;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+  }
+  .contact__link {
+    color: var(--title-text-color);
+    text-decoration: none;
+    padding: 32px 0;
+    display: flex;
+    align-items: center;
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus {
+      color: var(--accent-color);
+    }
+  }
+  .contact__icon {
+    margin-right: 10px;
+    fill: currentColor;
+  }
+
+  .contact__item {
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
+  }
+}
