--- a/sass/menu/_mobile.scss
+++ b/sass/menu/_mobile.scss
@@ -19,13 +19,15 @@
     border: none;
     background-color: transparent;
     padding: 10px 0;
+    cursor: pointer;
+    // transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 }
 
 .burger__icon {
   width: 40px;
   height: 40px;
-  color: #000000;
+  color: currentColor;
 }
 
 .mobile__menu {
@@ -43,38 +45,12 @@
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .mobile__menu.is-open {
   opacity: 1;
   visibility: visible;
   pointer-events: auto;
-}
-
-.mobile__container {
-  position: relative;
-  padding-left: 40px;
-}
-.close__menu {
-  position: absolute;
-  display: block;
-
-  top: 10px;
-  right: 15px;
-  padding: 0;
-  line-height: 0;
-  border: 0;
-  background-color: transparent;
-}
-
-.close__icon {
-  width: 40px;
-  height: 40px;
-  color: #212121;
-}
-
-@media screen and (min-width: 768px) {
-  .mobile__menu {
-    display: none;
-  }
 }
