--- a/sass/menu/_mobile-stayl.scss
+++ b/sass/menu/_mobile-stayl.scss
@@ -1,4 +1,8 @@
 @media screen and (max-width: 768px) {
+  .mobile__nav {
+    margin-bottom: auto;
+  }
+
   .mobile__list {
     font-family: 'Roboto';
     font-style: normal;
@@ -10,9 +14,12 @@
       margin-bottom: 32px;
     }
   }
-  .mobile__box .mobile__nav {
-    margin-bottom: auto;
-  }
+
+  //   .mobile__box {
+  //     display: flex;
+  //     flex-direction: column;
+  //     justify-content: space-between;
+  //   }
 
   .link.current {
     color: var(--accent-color);
@@ -25,6 +32,15 @@
     color: #2196f3;
   }
 
+  .mobile__item:not(:last-child) {
+    padding-right: 10px;
+    margin-right: 10px;
+    border-right: 1px solid rgba(33, 33, 33, 0.2);
+  }
+  .mobile__item {
+    margin-top: 64px;
+  }
+
   .mobile-contact__link {
     @include font(24px, 500, 28px);
     letter-spacing: 0.02em;
@@ -32,15 +48,6 @@
     color: #757575;
   }
 
-  .mobile__item:not(:last-child) {
-    padding-right: 10px;
-
-    margin-right: 10px;
-    border-right: 1px solid rgba(33, 33, 33, 0.2);
-  }
-  .mobile__item {
-    margin-top: 64px;
-  }
   .mobile__socials {
     display: flex;
     align-items: center;
@@ -53,8 +60,3 @@
     color: #2196f3;
   }
 }
-// .mobile__box {
-//   display: flex;
-//   flex-direction: column;
-//   justify-content: space-between;
-// }
