--- a/sass/sections/_hero.scss
+++ b/sass/sections/_hero.scss
@@ -1,17 +1,33 @@
-.hero {
-  padding-top: 200px;
-  padding-bottom: 200px;
-  background-color: var(--outline--background-color);
+@media screen and (min-width: 320px) {
+  .hero {
+    padding-top: 118px;
+    padding-bottom: 118px;
+    background-color: var(--outline--background-color);
+  }
+  .hero__title {
+    color: var(--primary-bg-color);
+    @include font(26px, 900, 42px);
+    text-align: center;
+    margin: 0 auto;
+    margin-bottom: 30px;
+
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    width: 360px;
+  }
 }
 
-.hero__title {
-  color: var(--primary-bg-color);
-  @include font(44px, 900, 60px);
-  text-align: center;
+@media screen and (min-width: 1200px) {
+  .hero {
+    padding-top: 200px;
+    padding-bottom: 200px;
+  }
 
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
-  width: 696px;
-  margin: 0 auto;
-  margin-bottom: 30px;
+  .hero__title {
+    @include font(44px, 900, 60px);
+    text-align: center;
+
+    letter-spacing: 0.06em;
+    width: 696px;
+  }
 }
