--- a/sass/menu/_mobile-container.scss
+++ b/sass/menu/_mobile-container.scss
@@ -1,5 +1,7 @@
 .mobile__container {
   position: relative;
+  display: flex;
+  flex-direction: column;
   padding-left: 40px;
   padding-bottom: 48px;
 }
