--- a/sass/menu/_mobile.scss
+++ b/sass/menu/_mobile.scss
@@ -12,6 +12,7 @@
   }
   .burger__menu {
     display: block;
+
     margin-left: auto;
     top: 10px;
     right: 0;
@@ -32,11 +33,12 @@
 
 .mobile__menu {
   position: fixed;
+  flex-direction: column;
   z-index: 100;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
 
   background: #ffffff;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08),
