--- a/sass/menu/_mobile-stayl.scss
+++ b/sass/menu/_mobile-stayl.scss
@@ -48,7 +48,7 @@
     align-items: center;
     font-family: 'Roboto';
     font-style: normal;
-
+    padding-bottom: 48px;
     @include font(18px, 500, 22px);
     letter-spacing: 0.02em;
 
