--- a/css/main.css
+++ b/css/main.css
@@ -271,6 +271,12 @@ img {
   padding-bottom: 48px;
 }
 
+.mobile__box {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
 .close__menu {
   position: absolute;
   display: block;
@@ -393,6 +399,7 @@ img {
     align-items: center;
     font-family: "Roboto";
     font-style: normal;
+    padding-bottom: 48px;
     font-size: 18px;
     font-weight: 500;
     line-height: 1.2222222222;
