--- a/sass/components/_overlay.scss
+++ b/sass/components/_overlay.scss
@@ -5,7 +5,7 @@
   margin-right: auto;
   outline: 1px solid var(--outline--background-color);
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url('../../mobile/header-mobile.jpg');
+    url('.././mobile/header-mobile.jpg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -16,14 +16,14 @@
   screen and (min-resolution: 2dppx) and (max-width: 767px) {
   .overlay {
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url('../../mobile/header-mobile@2x.jpg');
+      url('.././mobile/header-mobile@2x.jpg');
   }
 }
 
 @media screen and (min-width: 768px) {
   .overlay {
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url('../../tablet/header-tablet.jpg');
+      url('.././tablet/header-tablet.jpg');
   }
 }
 
@@ -32,14 +32,14 @@
   screen and (min-resolution: 2dppx) and (min-width: 768px) {
   .overlay {
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url('../../tablet/header-tablet@2x.jpg');
+      url('.././tablet/header-tablet@2x.jpg');
   }
 }
 @media screen and (min-width: 1200px) {
   .overlay {
     height: 600px;
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url('../../desktop/work.jpg');
+      url('.././desktop/work.jpg');
   }
 }
 
@@ -48,6 +48,6 @@
   screen and (min-resolution: 2dppx) and (min-width: 1200px) {
   .overlay {
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url('../../desktop/work@2x.jpg');
+      url('.././desktop/work@2x.jpg');
   }
 }
