--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,7 +14,9 @@
 
 @import './sections/hero';
 @import './components/overlay';
+@import './components/backdrop';
 @import './components/modal-window';
+
 @import './sections/feature-list';
 @import './sections/section-sidebar';
 @import './sections/team';
