--- a/css/main.css
+++ b/css/main.css
@@ -531,7 +531,7 @@ img {
   margin-left: auto;
   margin-right: auto;
   outline: 1px solid var(--outline--background-color);
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../mobile/header-mobile.jpg");
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(".././mobile/header-mobile.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -539,28 +539,28 @@ img {
 
 @media screen and (min-device-pixel-ratio: 2) and (max-width: 767px), screen and (min-resolution: 192dpi) and (max-width: 767px), screen and (min-resolution: 2dppx) and (max-width: 767px) {
   .overlay {
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../mobile/header-mobile@2x.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(".././mobile/header-mobile@2x.jpg");
   }
 }
 @media screen and (min-width: 768px) {
   .overlay {
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../tablet/header-tablet.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(".././tablet/header-tablet.jpg");
   }
 }
 @media screen and (min-device-pixel-ratio: 2) and (min-width: 768px), screen and (min-resolution: 192dpi) and (min-width: 768px), screen and (min-resolution: 2dppx) and (min-width: 768px) {
   .overlay {
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../tablet/header-tablet@2x.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(".././tablet/header-tablet@2x.jpg");
   }
 }
 @media screen and (min-width: 1200px) {
   .overlay {
     height: 600px;
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../desktop/work.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(".././desktop/work.jpg");
   }
 }
 @media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px), screen and (min-resolution: 192dpi) and (min-width: 1200px), screen and (min-resolution: 2dppx) and (min-width: 1200px) {
   .overlay {
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../desktop/work@2x.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(".././desktop/work@2x.jpg");
   }
 }
 .backdrop {
@@ -617,137 +617,123 @@ img {
   fill: currentColor;
 }
 
-.modal-form {
-  margin: 0;
-  padding: 0;
+@media screen and (min-width: 320px) {
+  .modal-form {
+    margin: 0;
+    padding: 0;
+  }
+  .alert {
+    margin-bottom: 12px;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.15;
+    text-align: center;
+  }
+  .modal-form__field {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin-bottom: 20px;
+  }
+  .modal-form__label {
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
+    color: var(--title-text-color);
+    margin-bottom: 4px;
+  }
+  .modal-form__input {
+    font-family: Roboto, sans-serif;
+    font-size: 16px;
+    letter-spacing: 0.03em;
+    color: var(--primari-text-color);
+    width: 100%;
+    height: 40px;
+    padding: 12px 0;
+    padding-left: 42px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    outline: none;
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .modal-form__input:hover, .modal-form__input:focus {
+    border: 1px solid var(--accent-color);
+    border-radius: 4px;
+    color: var(--primari-text-color);
+  }
+  .modal-form__box {
+    position: relative;
+    height: 40px;
+    margin-bottom: 10px;
+  }
+  .modal-form__icon {
+    position: absolute;
+    fill: currentColor;
+    top: 50%;
+    left: 12px;
+    transform: translateY(-50%);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .modal-form__input:hover + .modal-form__icon, .modal-form__input:focus + .modal-form__icon {
+    color: var(--accent-color);
+  }
+  .modal-form__comment {
+    resize: none;
+    width: 448px;
+    height: 120px;
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
+    padding: 12px 16px;
+    color: rgba(117, 117, 117, 0.5);
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    outline: none;
+  }
+  .checkbox {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 30px;
+  }
+  .checkbox__label {
+    display: flex;
+    line-height: 1.7;
+    align-items: center;
+    color: var(--title-text-color);
+  }
+  .checkbox__input {
+    position: absolute;
+    appearance: none;
+  }
+  .checkbox__use {
+    display: none;
+  }
+  .checkbox__svg {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 16px;
+    height: 15px;
+    border: 2px solid var(--primari-text-color);
+    margin-right: 7px;
+    border-radius: 2px;
+  }
+  .checkbox__input:checked + .checkbox__svg {
+    background: var(--accent-color);
+    border: none;
+  }
+  .checkbox__input:checked + .checkbox__svg .checkbox__use {
+    display: block;
+  }
+  .checkbox__link {
+    text-decoration-line: underline;
+    color: var(--accent-color);
+  }
 }
-
-.alert {
-  margin-bottom: 12px;
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 1.15;
-  text-align: center;
-}
-
-.modal-form__field {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  margin-bottom: 20px;
-}
-
-.modal-form__label {
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.01em;
-  color: var(--title-text-color);
-  margin-bottom: 4px;
-}
-
-.modal-form__input {
-  font-family: Roboto, sans-serif;
-  font-size: 16px;
-  letter-spacing: 0.03em;
-  color: var(--primari-text-color);
-  width: 100%;
-  height: 40px;
-  padding: 12px 0;
-  padding-left: 42px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-  outline: none;
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.modal-form__input:hover, .modal-form__input:focus {
-  border: 1px solid var(--accent-color);
-  border-radius: 4px;
-  color: var(--primari-text-color);
-}
-
-.modal-form__box {
-  position: relative;
-  height: 40px;
-  margin-bottom: 10px;
-}
-
-.modal-form__icon {
-  position: absolute;
-  fill: currentColor;
-  top: 50%;
-  left: 12px;
-  transform: translateY(-50%);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-form__input:hover + .modal-form__icon, .modal-form__input:focus + .modal-form__icon {
-  color: var(--accent-color);
-}
-
-.modal-form__comment {
-  resize: none;
-  width: 448px;
-  height: 120px;
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.01em;
-  padding: 12px 16px;
-  color: rgba(117, 117, 117, 0.5);
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-  outline: none;
-}
-
-.checkbox {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 30px;
-}
-
-.checkbox__label {
-  display: flex;
-  line-height: 1.7;
-  align-items: center;
-  color: var(--title-text-color);
-}
-
-.checkbox__input {
-  position: absolute;
-  appearance: none;
-}
-
-.checkbox__use {
-  display: none;
-}
-
-.checkbox__svg {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 16px;
-  height: 15px;
-  border: 2px solid var(--primari-text-color);
-  margin-right: 7px;
-  border-radius: 2px;
-}
-
-.checkbox__input:checked + .checkbox__svg {
-  background: var(--accent-color);
-  border: none;
-}
-.checkbox__input:checked + .checkbox__svg .checkbox__use {
-  display: block;
-}
-
-.checkbox__link {
-  text-decoration-line: underline;
-  color: var(--accent-color);
-}
-
 .feature__list {
   display: flex;
 }
