--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -1,210 +1,149 @@
-.backdrop {
-  position: fixed;
-  overflow: visible;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.2);
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  z-index: 10;
-}
+@media screen and (min-width: 320px) {
+  .modal-form {
+    margin: 0;
+    padding: 0;
+  }
 
-.is-hidden {
-  opacity: 0;
-  pointer-events: none;
-}
-.modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  .alert {
+    margin-bottom: 12px;
 
-  padding: 40px;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.15;
+    text-align: center;
+  }
 
-  background-color: var(--primary-bg-color);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 4px;
-}
+  .modal-form__field {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin-bottom: 20px;
+  }
 
-.modal__close {
-  position: absolute;
-  display: flex;
-  cursor: pointer;
-  top: 8px;
-  right: 8px;
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
+  .modal-form__label {
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
+    color: var(--title-text-color);
+    margin-bottom: 4px;
+  }
 
-  align-items: center;
-  justify-content: center;
+  .modal-form__input {
+    font-family: Roboto, sans-serif;
+    font-size: 16px;
+    letter-spacing: 0.03em;
+    color: var(--primari-text-color);
 
-  color: var(--studio);
-  background: var(--primary-bg-color);
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    width: 100%;
+    height: 40px;
+    padding: 12px 0;
+    padding-left: 42px;
 
-  &:hover,
-  &:focus {
-    color: var(--accent-color);
-    border: 1px solid var(--accent-color);
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    outline: none;
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus {
+      border: 1px solid var(--accent-color);
+      border-radius: 4px;
+      color: var(--primari-text-color);
+    }
+  }
+
+  .modal-form__box {
+    position: relative;
+    height: 40px;
+    margin-bottom: 10px;
+  }
+
+  .modal-form__icon {
+    position: absolute;
+    fill: currentColor;
+    top: 50%;
+    left: 12px;
+
+    transform: translateY(-50%);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .modal-form__input {
+    &:hover + .modal-form__icon,
+    &:focus + .modal-form__icon {
+      color: var(--accent-color);
+    }
+  }
+
+  .modal-form__comment {
+    resize: none;
+    width: 448px;
+    height: 120px;
+
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
+
+    padding: 12px 16px;
+
+    color: rgba(117, 117, 117, 0.5);
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
     outline: none;
   }
-}
-.modal__icon {
-  fill: currentColor;
-}
 
-.modal-form {
-  margin: 0;
-  padding: 0;
-}
-
-.alert {
-  margin-bottom: 12px;
-
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 1.15;
-  text-align: center;
-}
-
-.modal-form__field {
-  display: flex;
-
-  flex-direction: column;
-  width: 100%;
-
-  margin-bottom: 20px;
-}
-
-.modal-form__label {
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.01em;
-
-  color: var(--title-text-color);
-
-  margin-bottom: 4px;
-}
-
-.modal-form__input {
-  font-family: Roboto, sans-serif;
-  font-size: 16px;
-  letter-spacing: 0.03em;
-  color: var(--primari-text-color);
-
-  width: 100%;
-  height: 40px;
-  padding: 12px 0;
-  padding-left: 42px;
-
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-  outline: none;
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-  &:hover,
-  &:focus {
-    border: 1px solid var(--accent-color);
-    border-radius: 4px;
-    color: var(--primari-text-color);
+  .checkbox {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 30px;
   }
-}
 
-.modal-form__box {
-  position: relative;
-  height: 40px;
-  margin-bottom: 10px;
-}
+  .checkbox__label {
+    display: flex;
+    line-height: 1.7;
+    align-items: center;
 
-.modal-form__icon {
-  position: absolute;
-  fill: currentColor;
-  top: 50%;
-  left: 12px;
+    color: var(--title-text-color);
+  }
 
-  transform: translateY(-50%);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+  .checkbox__input {
+    position: absolute;
+    appearance: none;
+  }
+  .checkbox__use {
+    display: none;
+  }
 
-.modal-form__input {
-  &:hover + .modal-form__icon,
-  &:focus + .modal-form__icon {
+  .checkbox__svg {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 16px;
+    height: 15px;
+    border: 2px solid var(--primari-text-color);
+    margin-right: 7px;
+    border-radius: 2px;
+  }
+
+  .checkbox__input {
+    &:checked + .checkbox__svg {
+      background: var(--accent-color);
+      border: none;
+    }
+
+    &:checked + .checkbox__svg .checkbox__use {
+      display: block;
+    }
+  }
+
+  .checkbox__link {
+    text-decoration-line: underline;
+
     color: var(--accent-color);
   }
-}
-
-.modal-form__comment {
-  resize: none;
-  width: 448px;
-  height: 120px;
-
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.01em;
-
-  padding: 12px 16px;
-
-  color: rgba(117, 117, 117, 0.5);
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-  outline: none;
-}
-
-.checkbox {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 30px;
-}
-
-.checkbox__label {
-  display: flex;
-  line-height: 1.7;
-  align-items: center;
-
-  color: var(--title-text-color);
-}
-
-.checkbox__input {
-  position: absolute;
-  appearance: none;
-}
-.checkbox__use {
-  display: none;
-}
-
-.checkbox__svg {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 16px;
-  height: 15px;
-  border: 2px solid var(--primari-text-color);
-  margin-right: 7px;
-  border-radius: 2px;
-}
-
-.checkbox__input {
-  &:checked + .checkbox__svg {
-    background: var(--accent-color);
-    border: none;
-  }
-
-  &:checked + .checkbox__svg .checkbox__use {
-    display: block;
-  }
-}
-
-.checkbox__link {
-  text-decoration-line: underline;
-
-  color: var(--accent-color);
 }
