--- a/css/main.css
+++ b/css/main.css
@@ -624,9 +624,9 @@ img {
   }
   .alert {
     margin-bottom: 12px;
-    font-weight: 700;
     font-size: 20px;
-    line-height: 1.15;
+    font-weight: 700;
+    line-height: 1.5;
     text-align: center;
   }
   .modal-form__field {
@@ -644,7 +644,9 @@ img {
   }
   .modal-form__input {
     font-family: Roboto, sans-serif;
-    font-size: 16px;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.1428571429;
     letter-spacing: 0.03em;
     color: var(--primari-text-color);
     width: 100%;
@@ -679,13 +681,13 @@ img {
   }
   .modal-form__comment {
     resize: none;
-    width: 448px;
+    width: 370px;
     height: 120px;
     font-family: "Roboto";
     font-style: normal;
+    font-size: 14px;
     font-weight: 400;
-    font-size: 12px;
-    line-height: 1.17;
+    line-height: 1.1428571429;
     letter-spacing: 0.01em;
     padding: 12px 16px;
     color: rgba(117, 117, 117, 0.5);
@@ -701,7 +703,9 @@ img {
   }
   .checkbox__label {
     display: flex;
-    line-height: 1.7;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.1666666667;
     align-items: center;
     color: var(--title-text-color);
   }
@@ -732,6 +736,34 @@ img {
   .checkbox__link {
     text-decoration-line: underline;
     color: var(--accent-color);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .alert {
+    margin-bottom: 12px;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 1.15;
+    text-align: center;
+  }
+  .modal-form__comment {
+    width: 448px;
+  }
+  .modal-form__input {
+    font-family: Roboto, sans-serif;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.1666666667;
+  }
+  .modal-form__comment {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.1428571429;
+  }
+  .checkbox__label {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.7142857143;
   }
 }
 .feature__list {
