--- a/sass/sections/_feature-list.scss
+++ b/sass/sections/_feature-list.scss
@@ -1,32 +1,80 @@
-.feature__list {
-  display: flex;
-}
-.feature__item:not(:last-child) {
-  width: calc((100% - 90px) / 4);
-  margin-right: 30px;
+@media screen and (min-width: 320px) {
+  .feature__list {
+    display: block;
+  }
+  .feature__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+
+  .feature__title {
+    @include font(14px, 700, 16px);
+    text-transform: uppercase;
+    margin-bottom: 10px;
+    text-align: center;
+  }
+  .feature__text {
+    color: var(--title-text-color);
+    line-height: 1.7;
+  }
+  .background {
+    display: inline-flex;
+    width: 450px;
+    height: 120px;
+    border-radius: 4px;
+    background-color: var(--background);
+    margin-bottom: 30px;
+    align-items: center;
+    justify-content: center;
+    background-position: center;
+  }
+  .background__icon {
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
 }
 
-.feature__title {
-  @include font(14px, 700, 16px);
-  text-transform: uppercase;
-  margin-bottom: 10px;
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .feature__list {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .feature__item {
+    width: calc((100% - 30px) / 2);
+  }
+
+  .feature__item:not(:last-child) {
+    margin-right: 30px;
+    margin-bottom: 30px;
+
+    &:nth-child(2n) {
+      margin-right: 0;
+    }
+    &:nth-last-child(-n + 2) {
+      margin-bottom: 0;
+    }
+  }
+  .background {
+    width: 354px;
+  }
+  .feature__title {
+    text-align: start;
+  }
 }
-.feature__text {
-  color: var(--title-text-color);
-  line-height: 1.7;
-}
-.background {
-  display: inline-flex;
-  width: 270px;
-  height: 120px;
-  border-radius: 4px;
-  background-color: var(--background);
-  margin-bottom: 30px;
-  align-items: center;
-  justify-content: center;
-  background-position: center;
-}
-.background__icon {
-  background-repeat: no-repeat;
-  background-size: contain;
+@media screen and (min-width: 1200px) {
+  .feature__list {
+    display: flex;
+  }
+
+  .feature__item:not(:last-child) {
+    width: calc((100% - 90px) / 4);
+    margin-right: 30px;
+  }
+
+  .feature__title {
+    text-align: start;
+  }
+
+  .background {
+    width: 270px;
+  }
 }
