--- a/sass/sections/_section-sidebar.scss
+++ b/sass/sections/_section-sidebar.scss
@@ -1,47 +1,55 @@
-.section__sidebar {
-  padding-top: 0;
-}
-
-.section__title {
-  color: var(--primari-text-color);
-  @include font(36px, 700, 42px);
-
-  text-align: center;
-  margin-bottom: 50px;
-}
-.image__list {
-  display: flex;
-}
-
-.image__item {
-  max-width: 1200px;
-  height: auto;
-
-  &:not(:last-child) {
-    margin-right: 30px;
+@media screen and (max-width: 1199px) {
+  .section__sidebar {
+    display: none;
   }
 }
 
-.inner {
-  position: relative;
-  width: 100%;
-}
+@media screen and (min-width: 1200px) {
+  .section__sidebar {
+    padding-top: 0;
+  }
 
-.inner__text {
-  font-weight: 700;
-  line-height: 1.14;
+  .section__title {
+    color: var(--primari-text-color);
+    @include font(36px, 700, 42px);
 
-  display: flex;
-  position: absolute;
-  width: 100%;
-  height: 70px;
-  left: 0;
-  bottom: 0;
+    text-align: center;
+    margin-bottom: 50px;
+  }
+  .image__list {
+    display: flex;
+  }
 
-  justify-content: center;
-  align-items: center;
-  text-transform: uppercase;
+  .image__item {
+    max-width: 1200px;
+    height: auto;
 
-  color: var(--team-text--background);
-  background: rgba(47, 48, 58, 0.8);
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
+  }
+
+  .inner {
+    position: relative;
+    width: 100%;
+  }
+
+  .inner__text {
+    font-weight: 700;
+    line-height: 1.14;
+
+    display: flex;
+    position: absolute;
+    width: 100%;
+    height: 70px;
+    left: 0;
+    bottom: 0;
+
+    justify-content: center;
+    align-items: center;
+    text-transform: uppercase;
+
+    color: var(--team-text--background);
+    background: rgba(47, 48, 58, 0.8);
+  }
 }
