--- a/sass/sections/_team.scss
+++ b/sass/sections/_team.scss
@@ -1,34 +1,73 @@
-.team {
-  background-color: var(--background);
-}
+@media screen and (min-width: 320px) {
+  .team {
+    background-color: var(--background);
+  }
 
-.team__list {
-  display: flex;
-}
+  .team__list {
+    display: block;
+  }
 
-.team__item {
-  max-width: 270px;
-  background: var(--team-text--background);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
+  .team__item {
+    width: 450px;
+    background: var(--team-text--background);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+      0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
 
-  &:not(:last-child) {
-    margin-right: 30px;
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
+  }
+
+  .team__title {
+    @include font(16px, 500, 19px);
+    margin-bottom: 10px;
+  }
+  .team__text {
+    @include font(16px, 400, 19px);
+    color: var(--title-text-color);
+    margin-bottom: 16px;
+  }
+  .aside {
+    margin-top: 30px;
+    padding-bottom: 24px;
+    text-align: center;
   }
 }
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .team__list {
+    display: flex;
+    flex-wrap: wrap;
+    width: 738px;
+  }
 
-.team__title {
-  @include font(16px, 500, 19px);
-  margin-bottom: 10px;
+  .team__item:not(:last-child) {
+    margin-right: 30px;
+    margin-bottom: 30px;
+
+    &:nth-child(2n) {
+      margin-right: 0;
+    }
+    &:nth-last-child(-n + 2) {
+      margin-bottom: 0;
+    }
+  }
+  .team__item {
+    width: calc((100% - 30px) / 2);
+  }
 }
-.team__text {
-  @include font(16px, 400, 19px);
-  color: var(--title-text-color);
-  margin-bottom: 16px;
+@media screen and (min-width: 1200px) {
+  .team__list {
+    display: flex;
+  }
+  .aside {
+    padding: 30px 2px;
+  }
+  .team__item {
+    width: 270px;
+    &:not(:last-child) {
+      margin-right: 30px;
+      margin-bottom: 0px;
+    }
+  }
 }
-.aside {
-  padding: 30px 2px;
-  text-align: center;
-}
-// social
