--- a/css/main.css
+++ b/css/main.css
@@ -23,21 +23,24 @@
 
 @media screen and (min-width: 480px) {
   .container {
-    width: 450px;
+    width: 100vh;
+    max-width: 480px;
     margin-left: auto;
     margin-right: auto;
   }
 }
 @media screen and (min-width: 768px) {
   .container {
-    width: 738px;
+    width: 100%;
+    max-width: 768px;
     padding-left: 10px;
     padding-right: 10px;
   }
 }
 @media screen and (min-width: 1200px) {
   .container {
-    width: 1170px;
+    width: 100%;
+    max-width: 1200px;
     padding-left: 15px;
     padding-right: 15px;
   }
@@ -112,9 +115,9 @@ img {
   color: var(--accent-color);
   text-decoration: none;
   font-family: "Raleway", sans-serif;
-  font-size: 26px;
+  font-size: 24px;
   font-weight: 700;
-  line-height: 1.1923076923;
+  line-height: 1.1666666667;
 }
 
 @media screen and (max-width: 768px) {
@@ -131,6 +134,11 @@ img {
   }
 }
 @media screen and (min-width: 1200px) {
+  .logo {
+    font-size: 26px;
+    font-weight: 700;
+    line-height: 1.1923076923;
+  }
   .page__logo {
     margin-right: 93px;
   }
@@ -817,7 +825,7 @@ img {
     margin-bottom: 0;
   }
   .background {
-    width: 354px;
+    width: 100%;
   }
   .feature__title {
     text-align: start;
@@ -835,7 +843,7 @@ img {
     text-align: start;
   }
   .background {
-    width: 270px;
+    width: 100%;
   }
 }
 @media screen and (max-width: 1199px) {
@@ -989,178 +997,225 @@ img {
   fill: currentColor;
 }
 
-.logo__list {
-  display: flex;
+@media screen and (min-width: 320px) {
+  .logo__list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+  }
+  .logo__item {
+    display: block;
+    width: calc((100% - 30px) / 2);
+  }
+  .logo__link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 210px;
+    height: 92px;
+    border: 1px solid var(--link-f-in-twit);
+    border-radius: 4px;
+    color: var(--link-f-in-twit);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .logo__link:hover, .logo__link:focus {
+    color: var(--accent-color);
+    border: 1px solid var(--accent-color);
+  }
+  .logo__icon {
+    fill: currentColor;
+  }
 }
-
-.logo__item:not(:last-child) {
-  width: calc((100% - 150px) / 6);
-  margin-right: 30px;
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .logo__link {
+    width: 226px;
+  }
+  .logo__item {
+    width: calc((100% - 60px) / 3);
+  }
 }
-
-.logo__link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 170px;
-  height: 92px;
-  border: 1px solid var(--link-f-in-twit);
-  border-radius: 4px;
-  color: var(--link-f-in-twit);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+@media screen and (min-width: 1200px) {
+  .logo__list {
+    display: flex;
+  }
+  .logo__link {
+    width: 170px;
+  }
+  .logo__item {
+    width: calc((100% - 150px) / 6);
+  }
 }
-.logo__link:hover, .logo__link:focus {
-  color: var(--accent-color);
-  border: 1px solid var(--accent-color);
+@media screen and (min-width: 320px) {
+  .footer {
+    padding-top: 60px;
+    padding-bottom: 60px;
+    background-color: var(--heder-footer);
+  }
+  .footer__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  .footer-nav {
+    font-style: normal;
+    width: 231px;
+  }
+  .footer__nav {
+    color: var(--primary-bg-color);
+    text-decoration: none;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .footer__nav:hover, .footer__nav:focus {
+    color: var(--accent-color);
+  }
+  .footer__list {
+    margin-top: 20px;
+  }
+  .footer__item:not(:last-child) {
+    margin-bottom: 8px;
+  }
+  .footer__link {
+    color: var(--contact);
+    text-decoration: none;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .footer__link:hover, .footer__link:focus {
+    color: var(--accent-color);
+  }
+  .footer .list {
+    line-height: 1.7;
+  }
 }
-
-.logo__icon {
-  fill: currentColor;
+@media screen and (min-width: 1200px) {
+  .footer__container {
+    display: flex;
+    align-items: baseline;
+  }
+  .footer__item:not(:last-child) {
+    margin-bottom: 9px;
+  }
 }
-
-.footer {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background-color: var(--heder-footer);
-}
-
-.footer__container {
-  display: flex;
-  align-items: baseline;
-}
-
-.footer-nav {
-  font-style: normal;
-  width: 231px;
-}
-
-.footer__nav {
-  color: var(--primary-bg-color);
-  text-decoration: none;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.footer__nav:hover, .footer__nav:focus {
-  color: var(--accent-color);
-}
-
-.footer__list {
-  margin-top: 20px;
-}
-
-.footer__item:not(:last-child) {
-  margin-bottom: 9px;
-}
-
-.footer__link {
-  color: var(--contact);
-  text-decoration: none;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.footer__link:hover, .footer__link:focus {
-  color: var(--accent-color);
-}
-
-.footer .list {
-  line-height: 1.7;
-}
-
-.footer__logo {
-  margin-right: 70px;
-}
-
 .footer__studio {
   color: var(--primary-bg-color);
 }
 
-.footer__socials {
-  margin-right: auto;
+@media screen and (min-width: 1200px) {
+  .footer__logo {
+    margin-right: 70px;
+  }
 }
-
-.footer-socials__list {
-  display: flex;
+@media screen and (min-width: 320px) {
+  .footer__socials {
+    margin-top: 60px;
+    margin-bottom: 60px;
+  }
+  .footer-socials__list {
+    display: flex;
+  }
+  .footer__text {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+    color: var(--primary-bg-color);
+  }
+  .footer-socials__item:not(:last-child) {
+    margin-right: 10px;
+  }
+  .footer-socials__link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+    color: var(--primary-bg-color);
+    background-color: rgba(255, 255, 255, 0.1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .footer-socials__link:hover, .footer-socials__link:focus {
+    background-color: var(--accent-color);
+  }
+  .footer-socials__icon {
+    fill: currentColor;
+  }
 }
-
-.footer__text {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  margin-bottom: 20px;
-  color: var(--primary-bg-color);
+@media screen and (min-width: 1200px) {
+  .footer__socials {
+    margin-right: auto;
+  }
+  .footer-socials__list {
+    display: flex;
+  }
 }
-
-.footer-socials__item:not(:last-child) {
-  margin-right: 10px;
+@media screen and (min-width: 320px) {
+  .footer__mail {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  .footer-mail__input {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.25;
+    width: 450px;
+    box-sizing: border-box;
+    align-items: center;
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
+    background: #2f303a;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    padding: 15px 0;
+    padding-left: 16px;
+  }
+  .button-mail {
+    font-family: "Roboto";
+    font-style: normal;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 1.875;
+    width: 200px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.06em;
+    padding: 10px 28px;
+    margin-top: 20px;
+    color: var(--primary-bg-color);
+    background: var(--accent-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    border: none;
+  }
+  .button-mail__icon {
+    margin-left: 10px;
+  }
 }
-
-.footer-socials__link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
-  color: var(--primary-bg-color);
-  background-color: rgba(255, 255, 255, 0.1);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+@media screen and (min-width: 1200px) {
+  .footer__mail {
+    display: flex;
+  }
+  .footer-mail__input {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.25;
+    width: 358px;
+  }
+  .button-mail {
+    margin-left: 12px;
+  }
 }
-.footer-socials__link:hover, .footer-socials__link:focus {
-  background-color: var(--accent-color);
-}
-
-.footer-socials__icon {
-  fill: currentColor;
-}
-
-.footer__mail {
-  display: flex;
-}
-
-.footer-mail__input {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.25;
-  width: 358px;
-  box-sizing: border-box;
-  align-items: center;
-  letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.6);
-  background: #2f303a;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  border-radius: 4px;
-  padding: 15px 0;
-  padding-left: 16px;
-}
-
-.button-mail {
-  font-family: "Roboto";
-  font-style: normal;
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 1.875;
-  width: 200px;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  text-align: center;
-  letter-spacing: 0.06em;
-  padding: 10px 28px;
-  margin-left: 12px;
-  color: var(--primary-bg-color);
-  background: var(--accent-color);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  border: none;
-}
-
-.button-mail__icon {
-  margin-left: 10px;
-}
-
 .portfolio {
   padding: 94px 0;
 }
