--- a/sass/footer/_footer-container.scss
+++ b/sass/footer/_footer-container.scss
@@ -1,52 +1,70 @@
-.footer {
-  padding-top: 60px;
-  padding-bottom: 60px;
+@media screen and (min-width: 320px) {
+  .footer {
+    padding-top: 60px;
+    padding-bottom: 60px;
 
-  background-color: var(--heder-footer);
-}
-.footer__container {
-  display: flex;
-  align-items: baseline;
-}
+    background-color: var(--heder-footer);
+  }
+  .footer__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
 
-.footer-nav {
-  font-style: normal;
-  width: 231px;
-}
+  .footer-nav {
+    font-style: normal;
+    width: 231px;
+  }
 
-.footer__nav {
-  color: var(--primary-bg-color);
-  text-decoration: none;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  .footer__nav {
+    color: var(--primary-bg-color);
+    text-decoration: none;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  &:hover,
-  &:focus {
-    color: var(--accent-color);
+    &:hover,
+    &:focus {
+      color: var(--accent-color);
+    }
+  }
+
+  .footer__list {
+    margin-top: 20px;
+  }
+
+  .footer__item {
+    &:not(:last-child) {
+      margin-bottom: 8px;
+    }
+  }
+
+  .footer__link {
+    color: var(--contact);
+    text-decoration: none;
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus {
+      color: var(--accent-color);
+    }
+  }
+
+  .footer .list {
+    line-height: 1.7;
   }
 }
 
-.footer__list {
-  margin-top: 20px;
+@media screen and (min-width: 768px) and (max-width: 1199px) {
 }
-
-.footer__item {
-  &:not(:last-child) {
-    margin-bottom: 9px;
+@media screen and (min-width: 1200px) {
+  .footer__container {
+    display: flex;
+    align-items: baseline;
   }
-}
-
-.footer__link {
-  color: var(--contact);
-  text-decoration: none;
-
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-  &:hover,
-  &:focus {
-    color: var(--accent-color);
+  .footer__item {
+    &:not(:last-child) {
+      margin-bottom: 9px;
+    }
   }
-}
-
-.footer .list {
-  line-height: 1.7;
 }
