--- a/sass/footer/_footer-logo.scss
+++ b/sass/footer/_footer-logo.scss
@@ -1,6 +1,8 @@
-.footer__logo {
-  margin-right: 70px;
-}
 .footer__studio {
   color: var(--primary-bg-color);
+}
+@media screen and (min-width: 1200px) {
+  .footer__logo {
+    margin-right: 70px;
+  }
 }
