--- a/sass/footer/_footer-socials.scss
+++ b/sass/footer/_footer-socials.scss
@@ -1,44 +1,59 @@
-.footer__socials {
-  margin-right: auto;
-}
+@media screen and (min-width: 320px) {
+  .footer__socials {
+    margin-top: 60px;
+    margin-bottom: 60px;
+  }
 
-.footer-socials__list {
-  display: flex;
-}
+  .footer-socials__list {
+    display: flex;
+  }
 
-.footer__text {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  margin-bottom: 20px;
-  color: var(--primary-bg-color);
-}
-.footer-socials__item {
-  &:not(:last-child) {
-    margin-right: 10px;
+  .footer__text {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+    color: var(--primary-bg-color);
+  }
+  .footer-socials__item {
+    &:not(:last-child) {
+      margin-right: 10px;
+    }
+  }
+
+  .footer-socials__link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+    color: var(--primary-bg-color);
+    background-color: rgba(255, 255, 255, 0.1);
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus {
+      background-color: var(--accent-color);
+    }
+  }
+
+  .footer-socials__icon {
+    fill: currentColor;
   }
 }
 
-.footer-socials__link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
-  color: var(--primary-bg-color);
-  background-color: rgba(255, 255, 255, 0.1);
-
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-  &:hover,
-  &:focus {
-    background-color: var(--accent-color);
-  }
+@media screen and (min-width: 768px) and (max-width: 1199px) {
 }
+@media screen and (min-width: 1200px) {
+  .footer__socials {
+    margin-right: auto;
+  }
 
-.footer-socials__icon {
-  fill: currentColor;
+  .footer-socials__list {
+    display: flex;
+  }
 }
