--- a/sass/sections/_feature-list.scss
+++ b/sass/sections/_feature-list.scss
@@ -37,6 +37,7 @@
   .feature__list {
     display: flex;
     flex-wrap: wrap;
+    // gap: 30px;
   }
   .feature__item {
     width: calc((100% - 30px) / 2);
@@ -53,8 +54,9 @@
       margin-bottom: 0;
     }
   }
+
   .background {
-    width: 354px;
+    width: 100%;
   }
   .feature__title {
     text-align: start;
@@ -75,6 +77,6 @@
   }
 
   .background {
-    width: 270px;
+    width: 100%;
   }
 }
