--- a/sass/sections/_regular-customers.scss
+++ b/sass/sections/_regular-customers.scss
@@ -1,33 +1,54 @@
-.logo__list {
-  display: flex;
-}
+@media screen and (min-width: 320px) {
+  .logo__list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+  }
+  .logo__item {
+    display: block;
+    width: calc((100% - 30px) / 2);
+  }
 
-.logo__item {
-  &:not(:last-child) {
+  .logo__link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 210px;
+    height: 92px;
+    border: 1px solid var(--link-f-in-twit);
+    border-radius: 4px;
+    color: var(--link-f-in-twit);
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus {
+      color: var(--accent-color);
+      border: 1px solid var(--accent-color);
+    }
+  }
+
+  .logo__icon {
+    fill: currentColor;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .logo__link {
+    width: 226px;
+  }
+  .logo__item {
+    width: calc((100% - 60px) / 3);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .logo__list {
+    display: flex;
+  }
+  .logo__link {
+    width: 170px;
+  }
+
+  .logo__item {
     width: calc((100% - 150px) / 6);
-    margin-right: 30px;
   }
-}
-
-.logo__link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 170px;
-  height: 92px;
-  border: 1px solid var(--link-f-in-twit);
-  border-radius: 4px;
-  color: var(--link-f-in-twit);
-
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-  &:hover,
-  &:focus {
-    color: var(--accent-color);
-    border: 1px solid var(--accent-color);
-  }
-}
-
-.logo__icon {
-  fill: currentColor;
 }
