--- a/sass/utils/_container.scss
+++ b/sass/utils/_container.scss
@@ -5,7 +5,8 @@
 }
 @media screen and (min-width: 480px) {
   .container {
-    width: 450px;
+    width: 100vh;
+    max-width: 480px;
     margin-left: auto;
     margin-right: auto;
   }
@@ -13,14 +14,16 @@
 
 @media screen and (min-width: 768px) {
   .container {
-    width: 738px;
+    width: 100%;
+    max-width: 768px;
     padding-left: 10px;
     padding-right: 10px;
   }
 }
 @media screen and (min-width: 1200px) {
   .container {
-    width: 1170px;
+    width: 100%;
+    max-width: 1200px;
     padding-left: 15px;
     padding-right: 15px;
   }
