--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@
 }
 @media screen and (min-width: 768px) {
   .container {
-    max-width: 768px;
+    max-width: 758px;
     padding-left: 10px;
     padding-right: 10px;
   }
@@ -510,7 +510,7 @@ img {
     margin-bottom: 30px;
     letter-spacing: 0.06em;
     text-transform: uppercase;
-    width: 360px;
+    width: 100%;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -524,7 +524,7 @@ img {
     line-height: 1.3636363636;
     text-align: center;
     letter-spacing: 0.06em;
-    width: 696px;
+    width: 100%;
   }
 }
 .overlay {
@@ -968,7 +968,7 @@ img {
   display: flex;
   justify-content: center;
   gap: 10px;
-  padding: 0 32px;
+  padding: 0 30px;
 }
 
 .socials__link {
@@ -1044,6 +1044,10 @@ img {
     align-items: center;
     text-align: center;
   }
+  .footer-container__box {
+    display: flex;
+    flex-direction: column;
+  }
   .footer-nav {
     font-style: normal;
     width: 231px;
@@ -1074,10 +1078,23 @@ img {
     line-height: 1.7;
   }
 }
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .footer-container__box {
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+  }
+}
 @media screen and (min-width: 1200px) {
   .footer__container {
     display: flex;
-    align-items: baseline;
+    flex-direction: row;
+    align-items: start;
+    text-align: start;
+  }
+  .footer-container__box {
+    display: flex;
+    flex-direction: row;
   }
   .footer__item:not(:last-child) {
     margin-bottom: 9px;
@@ -1095,7 +1112,9 @@ img {
 @media screen and (min-width: 320px) {
   .footer__socials {
     margin-top: 60px;
-    margin-bottom: 60px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
   .footer-socials__list {
     display: flex;
@@ -1130,15 +1149,23 @@ img {
     fill: currentColor;
   }
 }
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .footer__socials {
+    margin-top: 0;
+    margin-left: 165px;
+  }
+}
 @media screen and (min-width: 1200px) {
   .footer__socials {
     margin-right: auto;
-  }
-  .footer-socials__list {
-    display: flex;
+    margin-top: 0;
+    align-items: normal;
   }
 }
 @media screen and (min-width: 320px) {
+  .footer-search {
+    margin-top: 60px;
+  }
   .footer__mail {
     display: flex;
     flex-direction: column;
@@ -1188,8 +1215,12 @@ img {
   }
 }
 @media screen and (min-width: 1200px) {
+  .footer-search {
+    margin-top: 0;
+    margin-left: auto;
+  }
   .footer__mail {
-    display: flex;
+    flex-direction: row;
   }
   .footer-mail__input {
     font-family: "Roboto";
@@ -1200,6 +1231,7 @@ img {
     width: 358px;
   }
   .button-mail {
+    margin-top: 0;
     margin-left: 12px;
   }
 }
