--- a/sass/footer/_footer-email.scss
+++ b/sass/footer/_footer-email.scss
@@ -1,4 +1,7 @@
 @media screen and (min-width: 320px) {
+  .footer-search {
+    margin-top: 60px;
+  }
   .footer__mail {
     display: flex;
     flex-direction: column;
@@ -59,8 +62,13 @@
 @media screen and (min-width: 768px) and (max-width: 1199px) {
 }
 @media screen and (min-width: 1200px) {
+  .footer-search {
+    margin-top: 0;
+    margin-left: auto;
+  }
+
   .footer__mail {
-    display: flex;
+    flex-direction: row;
   }
   .footer-mail__input {
     font-family: 'Roboto';
@@ -71,6 +79,8 @@
     width: 358px;
   }
   .button-mail {
+    margin-top: 0;
+
     margin-left: 12px;
   }
 }
