--- a/sass/footer/_footer-socials.scss
+++ b/sass/footer/_footer-socials.scss
@@ -1,7 +1,9 @@
 @media screen and (min-width: 320px) {
   .footer__socials {
     margin-top: 60px;
-    margin-bottom: 60px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
   .footer-socials__list {
@@ -47,13 +49,15 @@
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
+  .footer__socials {
+    margin-top: 0;
+    margin-left: 165px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .footer__socials {
     margin-right: auto;
-  }
-
-  .footer-socials__list {
-    display: flex;
+    margin-top: 0;
+    align-items: normal;
   }
 }
