--- a/sass/sections/_hero.scss
+++ b/sass/sections/_hero.scss
@@ -13,7 +13,7 @@
 
     letter-spacing: 0.06em;
     text-transform: uppercase;
-    width: 360px;
+    width: 100%;
   }
 }
 
@@ -28,6 +28,6 @@
     text-align: center;
 
     letter-spacing: 0.06em;
-    width: 696px;
+    width: 100%;
   }
 }
