--- a/sass/main.scss
+++ b/sass/main.scss
@@ -26,4 +26,6 @@
 @import './footer/footer-logo';
 @import './footer/footer-socials';
 @import './footer/footer-email';
+
+@import './components/button-portfolio';
 @import './sections/portfolio';
