--- a/sass/menu/_mobile-container.scss
+++ b/sass/menu/_mobile-container.scss
@@ -4,6 +4,8 @@
   flex-direction: column;
   padding-left: 40px;
   padding-bottom: 48px;
+  width: 100%;
+  height: 100%;
 }
 .mobile__box {
   display: flex;
