--- a/css/main.css
+++ b/css/main.css
@@ -274,6 +274,8 @@ img {
   flex-direction: column;
   padding-left: 40px;
   padding-bottom: 48px;
+  width: 100%;
+  height: 100%;
 }
 
 .mobile__box {
@@ -442,32 +444,6 @@ img {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
-.button__list {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 50px;
-}
-
-.button__item:not(:last-child) {
-  margin-right: 8px;
-}
-
-.secodary {
-  color: var(--primari-text-color);
-  background-color: var(--background);
-  padding: 6px 22px;
-  line-height: 1.6;
-  letter-spacing: 0.03em;
-  border-radius: 4px;
-  border: none;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.secodary:hover, .secodary:focus {
-  color: var(--primary-bg-color);
-  background-color: var(--accent-color);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-
 .modal__button {
   font-family: "Roboto";
   font-style: normal;
@@ -528,7 +504,7 @@ img {
   }
 }
 .overlay {
-  max-width: 1600px;
+  max-width: 480px;
   height: 400px;
   margin-left: auto;
   margin-right: auto;
@@ -546,6 +522,7 @@ img {
 }
 @media screen and (min-width: 768px) {
   .overlay {
+    max-width: 768px;
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(".././images/tablet/header-tablet.jpg");
   }
 }
@@ -556,6 +533,7 @@ img {
 }
 @media screen and (min-width: 1200px) {
   .overlay {
+    max-width: 1200px;
     height: 600px;
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(".././images/desktop/work.jpg");
   }
@@ -1233,6 +1211,43 @@ img {
   .button-mail {
     margin-top: 0;
     margin-left: 12px;
+  }
+}
+@media screen and (min-width: 320px) {
+  .button__list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: start;
+    column-gap: 8px;
+    row-gap: 15px;
+    margin-bottom: 40px;
+  }
+  .secodary {
+    color: var(--primari-text-color);
+    background-color: var(--background);
+    padding: 6px 22px;
+    line-height: 1.6;
+    letter-spacing: 0.03em;
+    border-radius: 4px;
+    border: none;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .secodary:hover, .secodary:focus {
+    color: var(--primary-bg-color);
+    background-color: var(--accent-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  }
+}
+@media screen and (min-width: 768px) {
+  .button__list {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .button__list {
+    margin-bottom: 50px;
   }
 }
 .portfolio {
