--- a/css/main.css
+++ b/css/main.css
@@ -90,11 +90,6 @@ img {
   text-decoration: none;
 }
 
-.section {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -108,6 +103,18 @@ img {
   overflow: hidden;
 }
 
+@media screen and (max-width: 1199px) {
+  .section {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
 .logo {
   color: var(--accent-color);
   text-decoration: none;
@@ -145,18 +152,22 @@ img {
   margin: 0;
 }
 
-.page__header {
-  height: 80px;
-  border-bottom: 1px solid var(--border--headr);
-}
-
-.nav__container,
+@media screen and (min-width: 280px) {
+  .page__header {
+    height: 60px;
+    border-bottom: 1px solid var(--border--headr);
+  }
+  .nav__container,
 .page__nav {
-  display: flex;
-  align-items: center;
+    display: flex;
+    align-items: center;
+  }
 }
-
 @media screen and (min-width: 768px) {
+  .page__header {
+    height: 80px;
+    border-bottom: 1px solid var(--border--headr);
+  }
   .nav__list {
     display: flex;
   }
@@ -272,8 +283,7 @@ img {
   position: relative;
   display: flex;
   flex-direction: column;
-  padding-left: 40px;
-  padding-bottom: 48px;
+  padding: 48px 40px;
   width: 100%;
   height: 100%;
 }
@@ -368,7 +378,6 @@ img {
     font-weight: 500;
     line-height: 1.175;
     letter-spacing: 0.02em;
-    padding-top: 48px;
   }
   .mobile__list .nav__item:not(:last-child) {
     margin-bottom: 32px;
@@ -381,16 +390,14 @@ img {
     font-weight: 500;
     line-height: 1.1764705882;
     letter-spacing: 0.02em;
-    color: #2196f3;
     margin-top: auto;
+    margin-bottom: 64px;
+    color: #2196f3;
   }
   .mobile__item:not(:last-child) {
     padding-right: 10px;
     margin-right: 10px;
     border-right: 1px solid rgba(33, 33, 33, 0.2);
-  }
-  .mobile__item {
-    margin-top: 64px;
   }
   .mobile-contact__link {
     font-size: 24px;
@@ -401,15 +408,20 @@ img {
   }
   .mobile__socials {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     font-family: "Roboto";
     font-style: normal;
-    padding-bottom: 48px;
     font-size: 18px;
     font-weight: 500;
     line-height: 1.2222222222;
     letter-spacing: 0.02em;
     color: #2196f3;
+  }
+}
+@media screen and (max-width: 460px) {
+  .mobile__item {
+    padding: 10px;
   }
 }
 .button {
@@ -490,6 +502,11 @@ img {
     width: 100%;
   }
 }
+@media screen and (min-width: 768px) {
+  .hero__title {
+    max-width: 360px;
+  }
+}
 @media screen and (min-width: 1200px) {
   .hero {
     padding-top: 200px;
@@ -501,7 +518,7 @@ img {
     line-height: 1.3636363636;
     text-align: center;
     letter-spacing: 0.06em;
-    width: 100%;
+    max-width: 696px;
   }
 }
 .overlay {
@@ -534,7 +551,7 @@ img {
 }
 @media screen and (min-width: 1200px) {
   .overlay {
-    max-width: 1200px;
+    max-width: 1600px;
     height: 600px;
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(".././images/desktop/work.jpg");
   }
@@ -561,7 +578,7 @@ img {
   pointer-events: none;
 }
 
-@media screen and (max-width: 1600px) {
+@media screen and (min-width: 100px) {
   .modal {
     position: absolute;
     top: 50%;
@@ -569,7 +586,6 @@ img {
     transform: translate(-50%, -50%);
     padding: 40px;
     width: 100%;
-    max-width: 528px;
     background-color: var(--primary-bg-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
@@ -607,6 +623,11 @@ img {
 @media screen and (max-width: 479px) {
   .modal {
     width: 90%;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .modal {
+    max-width: 528px;
   }
 }
 @media screen and (min-width: 320px) {
@@ -823,6 +844,7 @@ img {
   }
   .feature__item:not(:last-child) {
     margin-right: 30px;
+    margin-bottom: 0;
   }
   .feature__title {
     text-align: start;
@@ -1260,7 +1282,7 @@ img {
 }
 @media screen and (min-width: 320px) {
   .portfolio {
-    padding: 94px 0;
+    padding: 60px 0;
   }
   .grid {
     display: block;
@@ -1301,7 +1323,7 @@ img {
     height: 100%;
     background-color: rgba(33, 150, 243, 0.9);
     overflow: auto;
-    transform: translateY(100%);
+    transform: translateY(101%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 }
@@ -1354,6 +1376,9 @@ img {
   }
 }
 @media screen and (min-width: 1200px) {
+  .portfolio {
+    padding: 94px 0;
+  }
   .grid {
     display: flex;
     flex-wrap: wrap;
