--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,4 +1,4 @@
-@media screen and (max-width: 1600px) {
+@media screen and (min-width: 100px) {
   .modal {
     position: absolute;
     top: 50%;
@@ -6,7 +6,6 @@
     transform: translate(-50%, -50%);
     padding: 40px;
     width: 100%;
-    max-width: 528px;
 
     background-color: var(--primary-bg-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -52,5 +51,11 @@
 @media screen and (max-width: 479px) {
   .modal {
     width: 90%;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    max-width: 528px;
   }
 }
