--- a/sass/menu/_mobile-container.scss
+++ b/sass/menu/_mobile-container.scss
@@ -2,8 +2,8 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  padding-left: 40px;
-  padding-bottom: 48px;
+  padding: 48px 40px;
+
   width: 100%;
   height: 100%;
 }
