--- a/sass/menu/_mobile-stayl.scss
+++ b/sass/menu/_mobile-stayl.scss
@@ -4,7 +4,6 @@
     font-style: normal;
     @include font(40px, 500, 47px);
     letter-spacing: 0.02em;
-    padding-top: 48px;
 
     .nav__item:not(:last-child) {
       margin-bottom: 32px;
@@ -16,20 +15,16 @@
   }
   .mobile-contact__list {
     @include font(34px, 500, 40px);
-
     letter-spacing: 0.02em;
-
-    color: #2196f3;
     margin-top: auto;
+    margin-bottom: 64px;
+    color: #2196f3;
   }
 
   .mobile__item:not(:last-child) {
     padding-right: 10px;
     margin-right: 10px;
     border-right: 1px solid rgba(33, 33, 33, 0.2);
-  }
-  .mobile__item {
-    margin-top: 64px;
   }
 
   .mobile-contact__link {
@@ -41,13 +36,19 @@
 
   .mobile__socials {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     font-family: 'Roboto';
     font-style: normal;
-    padding-bottom: 48px;
+
     @include font(18px, 500, 22px);
     letter-spacing: 0.02em;
 
     color: #2196f3;
+  }
+}
+@media screen and (max-width: 460px) {
+  .mobile__item {
+    padding: 10px;
   }
 }
