--- a/sass/menu/_navigation.scss
+++ b/sass/menu/_navigation.scss
@@ -1,14 +1,20 @@
-.page__header {
-  height: 80px;
-  border-bottom: 1px solid var(--border--headr);
+@media screen and (min-width: 280px) {
+  .page__header {
+    height: 60px;
+    border-bottom: 1px solid var(--border--headr);
+  }
+  .nav__container,
+  .page__nav {
+    display: flex;
+    align-items: center;
+  }
 }
-.nav__container,
-.page__nav {
-  display: flex;
-  align-items: center;
-}
-
 @media screen and (min-width: 768px) {
+  .page__header {
+    height: 80px;
+    border-bottom: 1px solid var(--border--headr);
+  }
+
   .nav__list {
     display: flex;
   }
