--- a/sass/sections/_hero.scss
+++ b/sass/sections/_hero.scss
@@ -16,6 +16,11 @@
     width: 100%;
   }
 }
+@media screen and (min-width: 768px) {
+  .hero__title {
+    max-width: 360px;
+  }
+}
 
 @media screen and (min-width: 1200px) {
   .hero {
@@ -28,6 +33,6 @@
     text-align: center;
 
     letter-spacing: 0.06em;
-    width: 100%;
+    max-width: 696px;
   }
 }
