--- a/sass/sections/_portfolio.scss
+++ b/sass/sections/_portfolio.scss
@@ -1,6 +1,6 @@
 @media screen and (min-width: 320px) {
   .portfolio {
-    padding: 94px 0;
+    padding: 60px 0;
   }
 
   .grid {
@@ -54,7 +54,7 @@
 
     background-color: rgba(33, 150, 243, 0.9);
     overflow: auto;
-    transform: translateY(100%);
+    transform: translateY(101%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
@@ -109,6 +109,10 @@
 }
 
 @media screen and (min-width: 1200px) {
+  .portfolio {
+    padding: 94px 0;
+  }
+
   .grid {
     display: flex;
     flex-wrap: wrap;
