--- a/sass/menu/_mobile-stayl.scss
+++ b/sass/menu/_mobile-stayl.scss
@@ -48,6 +48,10 @@
   }
 }
 @media screen and (max-width: 460px) {
+  .mobile__socials {
+    padding-bottom: 10px;
+  }
+
   .mobile__item {
     padding: 10px;
   }
