--- a/css/main.css
+++ b/css/main.css
@@ -420,6 +420,9 @@ img {
   }
 }
 @media screen and (max-width: 460px) {
+  .mobile__socials {
+    padding-bottom: 10px;
+  }
   .mobile__item {
     padding: 10px;
   }
@@ -586,6 +589,7 @@ img {
     transform: translate(-50%, -50%);
     padding: 40px;
     width: 100%;
+    max-width: 450px;
     background-color: var(--primary-bg-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
@@ -615,19 +619,14 @@ img {
     fill: currentColor;
   }
 }
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 1200px) {
   .modal {
-    max-width: 450px;
+    max-width: 528px;
   }
 }
 @media screen and (max-width: 479px) {
   .modal {
     width: 90%;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .modal {
-    max-width: 528px;
   }
 }
 @media screen and (min-width: 320px) {
@@ -757,9 +756,6 @@ img {
     font-weight: 700;
     line-height: 1.15;
     text-align: center;
-  }
-  .modal-form__comment {
-    width: 448px;
   }
   .modal-form__input {
     font-family: Roboto, sans-serif;
