--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -1,6 +1,6 @@
 .backdrop {
   position: fixed;
-  overflow: visible;
+  overflow: scroll;
   top: 0;
   left: 0;
   width: 100%;
@@ -14,5 +14,3 @@
   opacity: 0;
   pointer-events: none;
 }
-
-
