--- a/css/main.css
+++ b/css/main.css
@@ -355,7 +355,7 @@ img {
   left: 0;
   width: 100%;
   height: 100vh;
-  background: #ffffff;
+  background: var(--team-text--background);
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
   opacity: 0;
   visibility: hidden;
@@ -392,7 +392,7 @@ img {
     letter-spacing: 0.02em;
     margin-top: auto;
     margin-bottom: 64px;
-    color: #2196f3;
+    color: var(--accent-color);
   }
   .mobile__item:not(:last-child) {
     padding-right: 10px;
@@ -404,7 +404,7 @@ img {
     font-weight: 500;
     line-height: 1.1666666667;
     letter-spacing: 0.02em;
-    color: #757575;
+    color: var(--title-text-color);
   }
   .mobile__socials {
     display: flex;
@@ -416,7 +416,7 @@ img {
     font-weight: 500;
     line-height: 1.2222222222;
     letter-spacing: 0.02em;
-    color: #2196f3;
+    color: var(--accent-color);
   }
 }
 @media screen and (max-width: 460px) {
@@ -1196,7 +1196,7 @@ img {
     align-items: center;
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
-    background: #2f303a;
+    background: var(--heder-footer);
     border: 1px solid rgba(255, 255, 255, 0.3);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
