--- a/sass/footer/_footer-email.scss
+++ b/sass/footer/_footer-email.scss
@@ -24,7 +24,7 @@
     letter-spacing: 0.03em;
 
     color: rgba(255, 255, 255, 0.6);
-    background: #2f303a;
+    background: var(--heder-footer);
     border: 1px solid rgba(255, 255, 255, 0.3);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
