--- a/sass/menu/_mobile.scss
+++ b/sass/menu/_mobile.scss
@@ -40,7 +40,7 @@
   width: 100%;
   height: 100vh;
 
-  background: #ffffff;
+  background: var(--team-text--background);
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08),
     0px 1px 3px rgba(0, 0, 0, 0.16);
 
